Git_to_Salesforce/ Q-assign/objects/Assignment_Rule__c.object
<CustomObject>
    <description>Assignment rules</description>
    <fields>
        <fullName>Assignment_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignment group</description>
        <label>Assignment Group</label>
        <referenceTo>Assignment_Group__c</referenceTo>
        <relationshipName>Assignment_Rule_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Prefix__c</fullName>
        <description>Object prefix</description>
        <label>Object Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <description>Queue id</description>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule Imported</label>
        <type>Checkbox</type>
    </fields>
    <label>QA Assignment Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>